[package]
name = "thirtyfour_cucumber_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cucumber = "0.12.0"
thirtyfour = "0.28.1"
async-trait = "0.1"
tokio = "1.16.1"

[[test]]
name = "dog_and_cat" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest